finish with styling

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,6 +5,16 @@ body {
   font-family: "open sans", sans-serif;
   color: rgb(44, 41, 44);
   background-color: rgb(247, 239, 247);
+
+  #backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(0, 0, 0, 0.75);
+    display: none;
+  }
 }
 
 #main-header {
@@ -33,8 +43,152 @@ body {
   background-color: transparent;
   border-color: transparent;
   color: $primary_color;
+  border-color: rgb(133, 127, 141);
   cursor: pointer;
   &:hover {
     background-color: rgb(245, 232, 255);
+    border-color: rgb(79, 10, 190);
+  }
+}
+
+main {
+  .modal {
+    position: fixed;
+    top: 20%;
+    left: 5%;
+    width: 90%;
+    background-color: white;
+    padding: 1rem;
+    border-radius: 6px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  }
+
+  #config-overlay {
+    text-align: center;
+    display: none;
+    h2 {
+      margin: 0.5rem 0;
+    }
+    .form-control {
+      margin: 0.5rem 0;
+      label {
+        display: block;
+        margin-bottom: 0.5rem;
+        font-weight: 700;
+      }
+      input {
+        font: inherit;
+        border: 1px solid rgb(204, 204, 204);
+        width: 15rem;
+        padding: 0.35rem;
+        margin-bottom: 1rem;
+      }
+    }
+  }
+
+  #game-configuration {
+    width: 90%;
+    max-width: 40rem;
+    margin: 3rem auto;
+    text-align: center;
+    h2 {
+      font-size: 1rem;
+      margin: 0.5rem 0;
+    }
+
+    h3 {
+      font-size: 1.5rem;
+      margin: 0.5rem 0;
+      color: rgb(94, 4, 168);
+    }
+
+    ol {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+    }
+    li {
+      margin: 1rem;
+      padding: 1rem;
+      width: 50%;
+      background-color: rgb(243, 227, 255);
+      border-radius: 4px;
+      box-shadow: 0 1px 4px rgb(0, 0, 0, 0.3);
+      cursor: pointer;
+      &:hover {
+        transform: scale(1.01);
+      }
+    }
+    .player-symbol {
+      font-size: 2rem;
+      font-weight: 700;
+      color: rgb(47, 2, 82);
+      margin: 0.5rem 0;
+    }
+  }
+
+  #active-game {
+    text-align: center;
+    margin: 2rem 0 5rem 0;
+
+    #game-over {
+      width: 90%;
+      max-width: 40rem;
+      margin: auto;
+      padding: 1rem 2rem;
+      background-color: rgb(50, 5, 87);
+      box-shadow: 0 2px 8px rgba(0, 0, 0.2);
+      color: white;
+      border-radius: 4px;
+      display: none;
+
+      h2 {
+        font-size: 2.5rem;
+        margin: 0.5rem 0;
+      }
+    }
+
+    #active-player-name {
+      font-weight: 700;
+      color: rgb(50, 5, 87);
+    }
+
+    #game-board {
+      list-style: none;
+      margin: 1rem 0;
+      padding: 0;
+      display: grid;
+      grid-template-columns: repeat(3, 6rem);
+      grid-template-rows: repeat(3, 6rem);
+      justify-content: center;
+      gap: 0.5rem;
+      li {
+        background-color: rgb(215, 187, 247);
+        border-radius: 2px;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 2.5rem;
+        font-weight: 700;
+
+        &:hover {
+          background-color: rgb(112, 13, 204);
+        }
+
+        &.disabled {
+          background-color: rgb(112, 13, 204);
+          cursor: default;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 48rem) {
+  .modal {
+    // left: calc(50% - 20rem);
+    width: 40rem;
   }
 }
