--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,15 @@ body {
   color: rgb(44, 41, 44);
   background-color: rgb(247, 239, 247);
 }
+body #backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.75);
+  display: none;
+}
 
 #main-header {
   background-color: rgb(140, 0, 255);
@@ -31,10 +40,140 @@ body {
   background-color: transparent;
   border-color: transparent;
   color: rgb(140, 0, 255);
+  border-color: rgb(133, 127, 141);
   cursor: pointer;
 }
 .btn-alt:hover {
   background-color: rgb(245, 232, 255);
+  border-color: rgb(79, 10, 190);
+}
+
+main .modal {
+  position: fixed;
+  top: 20%;
+  left: 5%;
+  width: 90%;
+  background-color: white;
+  padding: 1rem;
+  border-radius: 6px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+}
+main #config-overlay {
+  text-align: center;
+  display: none;
+}
+main #config-overlay h2 {
+  margin: 0.5rem 0;
+}
+main #config-overlay .form-control {
+  margin: 0.5rem 0;
+}
+main #config-overlay .form-control label {
+  display: block;
+  margin-bottom: 0.5rem;
+  font-weight: 700;
+}
+main #config-overlay .form-control input {
+  font: inherit;
+  border: 1px solid rgb(204, 204, 204);
+  width: 15rem;
+  padding: 0.35rem;
+  margin-bottom: 1rem;
+}
+main #game-configuration {
+  width: 90%;
+  max-width: 40rem;
+  margin: 3rem auto;
+  text-align: center;
+}
+main #game-configuration h2 {
+  font-size: 1rem;
+  margin: 0.5rem 0;
+}
+main #game-configuration h3 {
+  font-size: 1.5rem;
+  margin: 0.5rem 0;
+  color: rgb(94, 4, 168);
+}
+main #game-configuration ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+main #game-configuration li {
+  margin: 1rem;
+  padding: 1rem;
+  width: 50%;
+  background-color: rgb(243, 227, 255);
+  border-radius: 4px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+main #game-configuration li:hover {
+  transform: scale(1.01);
+}
+main #game-configuration .player-symbol {
+  font-size: 2rem;
+  font-weight: 700;
+  color: rgb(47, 2, 82);
+  margin: 0.5rem 0;
+}
+main #active-game {
+  text-align: center;
+  margin: 2rem 0 5rem 0;
+}
+main #active-game #game-over {
+  width: 90%;
+  max-width: 40rem;
+  margin: auto;
+  padding: 1rem 2rem;
+  background-color: rgb(50, 5, 87);
+  box-shadow: 0 2px 8px rgb(0, 0, 0);
+  color: white;
+  border-radius: 4px;
+  display: none;
+}
+main #active-game #game-over h2 {
+  font-size: 2.5rem;
+  margin: 0.5rem 0;
+}
+main #active-game #active-player-name {
+  font-weight: 700;
+  color: rgb(50, 5, 87);
+}
+main #active-game #game-board {
+  list-style: none;
+  margin: 1rem 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(3, 6rem);
+  grid-template-rows: repeat(3, 6rem);
+  justify-content: center;
+  gap: 0.5rem;
+}
+main #active-game #game-board li {
+  background-color: rgb(215, 187, 247);
+  border-radius: 2px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+main #active-game #game-board li:hover {
+  background-color: rgb(112, 13, 204);
+}
+main #active-game #game-board li.disabled {
+  background-color: rgb(112, 13, 204);
+  cursor: default;
+}
+
+@media screen and (min-width: 48rem) {
+  .modal {
+    width: 40rem;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
